    TODO: Implement UI stuff making clear that UTIs exclude suffixes
    TODO: Test new imageFileTypes stuff + UTI change + ibtool stuff
    TODO: Hide PROGRESS:XX and other bidirectional communications syntax from output text field
    TODO: Long GNU named params for command line tool, e.g. --some-option
    TODO: Fix red "Generic Application" icon text

    * New high resolution (1024x1024) application icons
    * Added ALERT:\.+ syntax, which triggers a modal alert dialog
    * Author name argument is now used to generate default bundle identifier in command line tool
    * Dropped text input (NSPboardText) is now passed to script via STDIN, not as an argument. This allows differentiation between dropped text snippets and dropped files in applications made to handle both.
    * Fixed issue with generating icon from images on retina macs (IconFamily)
    * Fixed issue with icon alpha channels (IconFamily)
    * Finder now refreshes display of overwritten applications
    * Better error handling in file operations
    * New retina icons in script type popup button
    * No longer linking to Carbon framework
    * CFBundleDevelopmentRegion in generated apps now declared using ISO code
    * New default "Use system font" option for status menu item output
    * New MENUITEMICON: syntax to set menu item icon in status menu output mode
    * The built-in editor has been much enhanced, with line numbering, configurable text size and other improvements
    * Migrated from UKKqueue to VDKQueue and got all file system watching working properly again
    * Uniform Type Identifiers (UTIs) are now supported in drop settings
    * More examples
    * Scripts can now send messages to User Notification Center via the NOTIFICATION:* syntax
    * New help buttons in main window and drop settings
    * Previewing status item menu now shows actual script output instead of placeholder text